# vercel-log-drain

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  LICENSE  README.md  default.nix
.github/workflows/: build.yml  test.yml
src/: app.rs  controller.rs  handlers.rs  main.rs  types.rs
src/drivers/: cloudwatch.rs  loki.rs  mod.rs  stdout.rs
src/fixtures/: sample_1.json  sample_2.json  sample_3.json  sample_4.json  sample_5.json  sample_6.json  structured_message_1.json  structured_message_2.json  test_build.json  test_edge.json  test_lambda.json  test_static.json
