[package]
name = "vercel-log-drain"
version = "0.1.0"
edition = "2021"

[features]
default = ["cloudwatch", "loki"]
cloudwatch = ["dep:aws-config", "dep:aws-sdk-cloudwatchlogs"]
loki = ["dep:reqwest"]

[lints.clippy]
needless_return = "allow"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.81"
aws-config = { version = "1.1.8", optional = true }
aws-sdk-cloudwatchlogs = { version = "1.16.0", optional = true }
axum = { version = "0.7.5", features = ["tracing"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-prometheus = "0.7.0"
clap = { version = "4.4.18", features = ["derive", "env"] }
hex = "0.4.3"
ring = "0.17.7"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
tokio = { version = "1.43.1", features = ["full"] }
tower = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }

[dependencies.reqwest]
# Used by loki driver
optional = true
version = "0.12.7"
default-features = false
features = ["json", "rustls-tls", "charset"]
